[gd_scene load_steps=3 format=3 uid="uid://bkt7y5m3p8xrq"]

[ext_resource type="Script" path="res://scripts/spells/magic_heal.gd" id="1_heal"]

[sub_resource type="SpriteFrames" id="SpriteFrames_heal"]

[node name="MagicHeal" type="Node2D"]
script = ExtResource("1_heal")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_heal")
offset = Vector2(0, -40)

[node name="HealTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = false

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = false

[node name="ParticleEffect" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
lifetime = 2.0
speed_scale = 1.2
explosiveness = 0.3
randomness = 0.4
local_coords = false
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(0, -1)
spread = 30.0
gravity = Vector2(0, -80)
initial_velocity_min = 30.0
initial_velocity_max = 70.0
scale_amount_min = 1.5
scale_amount_max = 3.0
color = Color(0.2, 1, 0.3, 1)
